[tool.poetry]
name = "llama-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.0"
torch = "^2.4.0"
datasets = "^2.21.0"
evaluate = "^0.4.2"
setuptools = "^73.0.0"
huggingface-hub = "^0.24.6"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
unsloth = {git = "https://github.com/unslothai/unsloth.git", rev = "main"}
bitsandbytes = "^0.43.3"
vllm = "^0.5.4"
trl = "^0.9.6"
peft = "^0.12.0"
accelerate = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
